--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ header div{
 
 nav ul {
     list-style: none;
-    padding: 10 px;
+    padding: 10px;
 }
 
 nav ul li {
     display: inline;
-    margin: 0 15 px;
+    margin:  15px;
 }
 a{
     text-decoration: none;
